[metadata]
name = hundate
version = 1.0.1
description = NLP modul for hungarian date-entity recognition and translation to specific date values
long_description = file: README.md
long_description_content_type = text/markdown
author = Emődy Zsolt
author_email = diszkurziv@gmail.com
licence = MIT
url = https://github.com/COREtxt/hundate-core
project_urls =
    Bug Tracker = https://github.com/COREtxt/hundate-core/issues
classifiers =
    Programming Language :: Python :: 3
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy>=1.21.5
    python-dateutil>=2.8.1
python_requires = >=3.7

[options.packages.find]
where = src
